# easyfaces

./: Aptfile  README.md  facedetector.py  main.py  pyproject.toml  requirements.txt
