[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy-stl = "^2.16.3"
opencv-utils = "^0.0.2"
pyTelegramBotAPI = "^4.2.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
